Fixed image 2 visibility

--- a/assets/css/headerImages.css
+++ b/assets/css/headerImages.css
@@ -11,7 +11,7 @@
 
 .image-2 {
     /* background-color: rgb(105, 105, 105); */
-    background-image: url("../../images/code.jpg");
+    background-image: url("../../images/Code.jpg");
     background-position: center;
     background-size: cover;
     filter: saturate(0.35);
